fixed weird overflow

--- a/oblig3/assets/style.css
+++ b/oblig3/assets/style.css
@@ -70,7 +70,7 @@ body {
 }
 
 #headline-page {
-    max-width: 100vw;
+    max-width: 100%;
     height: 100vh;
     box-sizing: border-box;
     display: grid;
@@ -84,7 +84,7 @@ body {
 
 #headline-page img {
     grid-area: image;
-    max-width: 80%;
+    width: 80%;
     align-self: center;
     justify-self: center;
 }
@@ -280,10 +280,13 @@ footer.page>p {
 
 footer.page iframe {
     max-width: 100%;
+    padding: 5px;
+    box-sizing: border-box;
 }
 
 #contact-page,
-#game-page {
+#game-page,
+#about-page {
     flex-direction: column;
 }
 
@@ -378,11 +381,6 @@ footer.page iframe {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.about-img img {
-    max-width: 80%;
-    padding: 0;
 }
 
 @media screen and (max-width: 600px) {
